// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorites should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favorites={
        Array [
            Object {
              "id": 2,
              "name": "thor",
            },
          ]
    }
    movies={
        Array [
            Object {
              "id": 1,
              "name": "thor",
            },
          ]
    }
    removeFavorite={[Function]}
    user={
        Object {
            "id": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          favorites={
                    Array [
                              Object {
                                "id": 2,
                                "name": "thor",
                              },
                            ]
          }
          movie={
                    Object {
                              "id": 2,
                              "name": "thor",
                            }
          }
          toggleFavorite={[Function]}
          userId={1}
/>,
      ],
      "className": "favorite-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "favorites": Array [
            Object {
              "id": 2,
              "name": "thor",
            },
          ],
          "movie": Object {
            "id": 2,
            "name": "thor",
          },
          "toggleFavorite": [Function],
          "userId": 1,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            favorites={
                        Array [
                                    Object {
                                      "id": 2,
                                      "name": "thor",
                                    },
                                  ]
            }
            movie={
                        Object {
                                    "id": 2,
                                    "name": "thor",
                                  }
            }
            toggleFavorite={[Function]}
            userId={1}
/>,
        ],
        "className": "favorite-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "favorites": Array [
              Object {
                "id": 2,
                "name": "thor",
              },
            ],
            "movie": Object {
              "id": 2,
              "name": "thor",
            },
            "toggleFavorite": [Function],
            "userId": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Favorites should match snapshot when no movies present in favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favorites={Array []}
    movies={
        Array [
            Object {
              "id": 1,
              "name": "thor",
            },
          ]
    }
    user={
        Object {
            "id": 1,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h2>
        Please Add Favorites
</h2>,
      "className": "home-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Please Add Favorites",
      },
      "ref": null,
      "rendered": "Please Add Favorites",
      "type": "h2",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h2>
          Please Add Favorites
</h2>,
        "className": "home-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Please Add Favorites",
        },
        "ref": null,
        "rendered": "Please Add Favorites",
        "type": "h2",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Favorites should match snapshot when no user present in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorites
    favorites={Array []}
    movies={
        Array [
            Object {
              "id": 1,
              "name": "thor",
            },
          ]
    }
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h2>
        Please Sign In/Sign Up to add Favorites
</h2>,
      "className": "home-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Please Sign In/Sign Up to add Favorites",
      },
      "ref": null,
      "rendered": "Please Sign In/Sign Up to add Favorites",
      "type": "h2",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h2>
          Please Sign In/Sign Up to add Favorites
</h2>,
        "className": "home-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Please Sign In/Sign Up to add Favorites",
        },
        "ref": null,
        "rendered": "Please Sign In/Sign Up to add Favorites",
        "type": "h2",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
